--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.adjust-replica-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.adjust-replica-distribution.md
@@ -8,7 +8,7 @@
 
 变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
 
-有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+有关 Zone 上资源单元和资源池的状态的检查方法，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 注意事项
 
@@ -18,27 +18,27 @@
 
 * 在旧一轮租户 Locality 没有完成变更时，新一轮的租户 Locality 变更不允许被执行。
 
-* Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4 ，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
+* Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
 
 * 通过增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 操作步骤
 
-示例：通过修改租户 mysql001 的 Locality，由 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 修改为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4` 。
+示例：通过修改租户 `mysql001` 的 Locality，由 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 修改为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4`。
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
    ```sql
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
    ```sql
    obclient>use oceanbase;
    ```
 
-3. 查看租户 mysql001 修改前的 Locality 。
+3. 查看租户 `mysql001` 修改前的 Locality。
 
    ```sql
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
@@ -50,9 +50,9 @@
    |      1002 | mysql001    | USER        | zone1;zone2;zone3 | FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3 |
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
 
-   可以看到租户 mysql001 分别在 zone1 、zone2 和 zone3 上有一个全能型副本。
+   可以看到租户 `mysql001` 分别在 zone1 、zone2 和 zone3 上有一个全能型副本。
 
-4. 修改租户 mysql001 的 Locality ，增加一个 zone4 的副本。
+4. 修改租户 `mysql001` 的 Locality，增加一个 zone4 的副本。
 
    ```sql
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3, FULL{1}@zone4";
@@ -71,7 +71,7 @@
 
    当 `JOB_STATUS` 为 `SUCCESS` 时，则说明 Locality 变更任务执行成功。
 
-6. 修改租户 mysql001 的 Locality ，减少 zone3 的副本。
+6. 修改租户 `mysql001` 的 Locality，减少 zone3 的副本。
 
    ```sql
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4";
@@ -90,7 +90,7 @@
 
    当 `JOB_STATUS` 为 `SUCCESS` 时，则说明 Locality 变更任务执行成功。
 
-8. 查看租户 mysql001 修改后的 Locality 。
+8. 查看租户 `mysql001` 修改后的 Locality。
 
    ```sql
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
@@ -103,12 +103,20 @@
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    ```
 
-通过步骤 3 与步骤 8 的查询比较， 租户 mysql001 的 Locality 由原来的 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 变为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4` ，租户 mysql001 在 zone1、zone2、zone4 上分别有一个全能型副本。
+通过步骤 3 与步骤 8 的查询比较， 租户 `mysql001` 的 Locality 由原来的 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 变为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4` ，租户 `mysql001` 在 zone1、zone2、zone4 上分别有一个全能型副本。
 
-在步骤 4 执行过后，增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
+在步骤 4 执行过后，增加副本会导致租户 Locality 与租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 相关文档
 
-* 关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
+* [Locality 介绍](../1.locality-overview.md)
 
-* 关于视图 `DBA_OB_TENANT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/57.oceanbase-dba_ob_tenant_jobs-of-mysql-mode.md) 。
+* [修改 Locality](2.modify-locality.md)
+
+* [查看 Locality](1.view-locality.md)
+
+* [增加副本](3.add-replica.md)
+
+* [减少副本](4.reduce-replicas.md)
+
+* [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)
