--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
@@ -6,13 +6,13 @@
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
    ```sql
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
    ```sql
    obclient>USE oceanbase;
@@ -34,7 +34,7 @@
         +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
      ```
 
-   * 查看某一租户上的历史 locality 变更记录。
+   * 查看某一租户上的历史 Locality 变更记录。
 
      ```sql
         obclient [oceanbase]> SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY' AND tenant_id = 1002 ORDER BY START_TIME DESC LIMIT 10;
