--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
@@ -4,21 +4,21 @@
 
 ## 操作步骤
 
-示例：将租户 mq_t1 中 `UNIT_ID = 1006` 的 Unit 迁移到同 Zone 的另一个节点。
+示例：将租户 `mq_t1` 中 `UNIT_ID = 1006` 的 Unit 迁移到同 Zone 的另一个节点。
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient>use oceanbase;
     ```
 
-3. 查询租户 mq_t1 的 tenant_id。
+3. 查询租户 `mq_t1` 的 `tenant_id`。
 
     ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -31,7 +31,7 @@
     5 rows in set
     ```
 
-4. 查看对应租户 mq_t1 的 Unit 信息。
+4. 查看对应租户 `mq_t1` 的 Unit 信息。
 
     ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
@@ -62,7 +62,7 @@
     6 rows in set
     ```
 
-6. 将租户 mq_t1 中 `UNIT_ID = 1006` 的 Unit 迁移到同 Zone 的另一个节点。
+6. 将租户 `mq_t1` 中 `UNIT_ID = 1006` 的 Unit 迁移到同 Zone 的另一个节点。
 
     ```sql
     obclient> ALTER SYSTEM migrate unit = 1006 destination = 'xx.xx.xx.158:2882';
@@ -95,14 +95,4 @@
     3 rows in set
     ```
 
-通过查询可以看到 `UNIT_ID = 1006` 已经由 `xx.xx.xx.19` 变更为 `xx.xx.xx.158` 。
-
-## 相关文档
-
-* 关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
-
-* 关于视图 `DBA_OB_SERVERS` 的介绍可以详见视图 [oceanbase.DBA_OB_SERVERS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md) 。
-
-* 关于视图 `DBA_OB_UNIT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_UNIT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/59.oceanbase-dba_ob_unit_jobs-of-mysql-mode.md) 。
-  
-* 关于视图 `DBA_OB_UNITS` 的介绍可以详见视图 [oceanbase.DBA_OB_UNITS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md) 。
+通过查询可以看到 `UNIT_ID = 1006` 已经由 `xx.xx.xx.19` 变更为 `xx.xx.xx.158`。
