--- a/zh-CN/6.manage/3.replica-management/4.log-stream/7.summary.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/7.summary.md
@@ -1,8 +1,8 @@
 # 总结
 
-通过对分区、分片、日志流、资源组、日志流组的介绍，做一总结：
+通过对分区、分片、日志流、资源组、日志流组的介绍，做如下总结：
 
-* 通过设置租户的 Unit Number 和 Primary Zone，定义了一组 承载业务流量的 Unit 集合，其个数为两者个数之乘积。每个 Unit 放置于一个节点上，从而可以方便的实现租户容量的水平扩展。
+* 通过设置租户的 Unit Number 和 Primary Zone，定义了一组承载业务流量的 Unit 集合，其个数为两者个数之乘积。每个 Unit 放置于一个节点上，从而可以方便的实现租户容量的水平扩展。
   
 * 系统为每个 Zone 的 Unit 进行编号，相同编号的 Unit 组成一个 Unit Group。Unit Group 内 所有 Unit 上的数据分布相同，即每个 Unit Group 框定了一组数据。
   
@@ -16,8 +16,8 @@
 
 OceanBase 数据库从多个层面将数据和流量灵活分布于多个节点上：
 
-* Unit 可以在节点之间迁移以实现节点均衡，Unit 在节点之间迁移可参见 [副本迁移](../2.replica-distribution/2.common-operations/7.replica-migration.md)；
+* Unit 可以在节点之间迁移以实现节点均衡，Unit 在节点之间迁移的详细信息参见 [副本迁移](../2.replica-distribution/2.common-operations/7.replica-migration.md)；
 
-* 日志流可以通过分裂和合并以实现租户的扩缩容，详细可参见 [通过调整 Unit Number 实现租户扩缩容](../5.tenant-expansion-and-contraction/3.adjust-unit-number.md)和 [调整 Primary Zone](../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；
+* 日志流可以通过分裂和合并以实现租户的扩缩容，详细信息参见 [通过调整 Unit Number 实现租户扩缩容](../5.tenant-expansion-and-contraction/3.adjust-unit-number.md)和 [调整 Primary Zone](../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；
 
 * Tablet 可以在日志流之间迁移以实现日志流的分区均衡。
