--- a/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -8,15 +8,15 @@
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
-  删除资源池的相关操作请参见 [删除资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md)。
+  删除资源池的相关操作，参见 [删除资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md)。
 
 * 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
 
-  手动触发转储的相关操作请参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
+  手动触发转储的相关操作，参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
 
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
-  查看集群节点的资源总量和分配状态的相关操作请参见 [查看集群的资源信息](../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+  查看集群节点的资源总量和分配状态的相关操作，参见 [查看集群的资源信息](../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 注意事项
 
@@ -41,9 +41,9 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
   在分配 Unit 时，系统会根据配置项 `resource_hard_limit` 的值来分配 CPU 资源。该配置项的默认值为 `100` ，表示不允许超卖，取值范围为 `[0, 10000]`。
 
-  更多配置项 `resource_hard_limit` 的说明信息请参见 [resource_hard_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
+  更多配置项 `resource_hard_limit` 的说明信息，参见 [resource_hard_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
 
-## 调整资源规格操作
+## 调整资源规格
 
 在通过调大和调小租户资源规格进行扩容和缩容时，有以下两种场景：
 
@@ -55,7 +55,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 确认租户是否使用了独立的资源规格，可以执行以下语句，获取待操作的租户所使用的资源规格 ID：
 
-1. 使用 root 用户登录数据库的 sys 租户。
+1. 使用 root 用户登录集群的 sys 租户。
 
    ```sql
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
@@ -78,30 +78,30 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
     6 rows in set
     ```
 
-根据查询结果，如果当前租户对应的 UNIT_CONFIG_ID 与其他租户相同，则表示有多个租户使用了相同的资源规格；
+根据查询结果，如果当前租户对应的 `UNIT_CONFIG_ID` 与其他租户相同，则表示有多个租户使用了相同的资源规格。
 
-如果当前租户中对应的 UNIT_CONFIG_ID 与其他租户均不相同，则表示该租户使用了独立的资源规格，例如租户 mq_t1 所对应的 UNIT_CONFIG_ID 与其他租户的都不一样，所以租户 mq_t1 使用了独立的资源规格。
+如果当前租户中对应的 `UNIT_CONFIG_ID` 与其他租户均不相同，则表示该租户使用了独立的资源规格，例如租户 `mq_t1` 所对应的 `UNIT_CONFIG_ID` 与其他租户的都不一样，所以租户 `mq_t1` 使用了独立的资源规格。
 
 ### 租户配置了独立的资源规格的场景
 
-如果待操作的租户配置了独立的资源规格，可以直接通过修改租户的 unit_config 来完成租户的扩容和缩容。
+如果待操作的租户配置了独立的资源规格，可以直接通过修改租户的 `unit_config` 来完成租户的扩容和缩容。
 
 示例：
-下面以调整租户 mq_t1 的资源规格，调大 CPU 资源为例进行说明。
+下面以调整租户 `mq_t1` 的资源规格，调大 CPU 资源为例进行说明。
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient>USE oceanbase;
     ```
 
-3. 查询待操作租户所使用的 UNIT_CONFIG_ID 。
+3. 查询待操作租户所使用的 `UNIT_CONFIG_ID`。
 
     ```sql
     obclient> SELECT a.TENANT_NAME, b.UNIT_CONFIG_ID  FROM oceanbase.DBA_OB_TENANTS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.TENANT_ID=a.TENANT_ID;
@@ -132,7 +132,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 5. 调整资源规格。
 
-    调大 S2_unit_config 配置
+    调大 `S2_unit_config` 配置。
 
       ```sql
       obclient> ALTER RESOURCE UNIT S2_unit_config MAX_CPU 5, MIN_CPU 5;
@@ -150,7 +150,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
     1 row in set
     ```
 
-根据查询结果，查看 MAX_CPU 与 MIN_CPU 已改成对应值，则表示执行成功。
+根据查询结果，查看 `MAX_CPU` 与 `MIN_CPU` 已改成对应值，则表示执行成功。
 
 ### 多个租户使用了相同的资源规格的场景
 
@@ -158,21 +158,21 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 此场景下，需要先创建独立的资源规格后，再为租户切换资源规格。
 
-同样以租户 mq_t1 为例，示例如何调整 CPU 资源。
+同样以租户 `mq_t1` 为例，示例如何调整 CPU 资源。
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient>use oceanbase;
     ```
 
-3. 查询待操作租户所使用的 UNIT_CONFIG_ID 和 RESOURCE_POOL_NAME 。
+3. 查询待操作租户所使用的 `UNIT_CONFIG_ID` 和 `RESOURCE_POOL_NAME`。
 
     ```sql
     obclient> SELECT a.TENANT_NAME, b.NAME RESOURCE_POOL_NAME, b.UNIT_CONFIG_ID  FROM oceanbase.DBA_OB_TENANTS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.TENANT_ID=a.TENANT_ID;
@@ -202,7 +202,8 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
     ```
 
 5. 创建一个独立的新资源规格，新资源规格各项资源值为待修改的目标值。
-    创建比当前资源规格高的 new_S2_unit_config
+
+    创建比当前资源规格高的 `new_S2_unit_config`。
 
       ```sql
       obclient> CREATE RESOURCE UNIT new_S2_unit_config MAX_CPU = 5, MIN_CPU = 5, MEMORY_SIZE = '12884901888',LOG_DISK_SIZE = '38654705664',MAX_IOPS = 30000, MIN_IOPS  = 30000, IOPS_WEIGHT=3;
@@ -288,3 +289,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
   +-------------+----------+---------+-----------+---------+---------+---------------+----------+----------+-------------+-----------------+-------------------+--------------------+--------+----------------------------+
   25 rows in set
   ```
+
+## 相关文档
+
+* [租户扩缩容介绍](1.introduction-to-tenant-scale-in-and-out.md)。
