--- a/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -1,22 +1,22 @@
 # 调整 Primary Zone
 
-本文介绍如何通过修改 Primary Zone ，达到租户扩容的功能。
+本文介绍如何通过修改 Primary Zone，达到租户扩容的功能。
 
 ## 增加 primary_zone
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient>use oceanbase;
     ```
 
-3. 查询租户 mq_t1 的基本信息，例如 `locality`、`primary zone` 等属性。
+3. 查询租户 `mq_t1` 的基本信息，例如 `locality`、`primary zone` 等属性。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
@@ -28,7 +28,7 @@
     1 row in set
    ```
 
-4. 查询租户 mq_t1 的 unit 信息，在单个 Zone 的 `unit num` 为 2。
+4. 查询租户 `mq_t1` 的 Unit 信息，在单个 Zone 的 `unit num` 为 2。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
@@ -45,7 +45,7 @@
     6 rows in set
    ```
 
-5. 查询租户 mq_t1 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此日志流个数为 2。
+5. 查询租户 `mq_t1` 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此日志流个数为 2。
 
    ```sql
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
@@ -59,13 +59,13 @@
     3 rows in set
    ```
 
-6. 修改租户 mq_t1 的 primary_zone 属性，从 1 调整为 2 。
+6. 修改租户 `mq_t1` 的 `primary_zone` 属性，从 1 调整为 2 。
 
    ```sql
     ALTER TENANT mq_t1 primary_zone='sa128_obv4_1,sa128_obv4_2;sa128_obv4_3'; 
    ```
 
-7. 查询租户 mq_t1 的基本信息，确认 `primary_zone` 属性修改成功，由 `sa128_obv4_1` 变更为 `sa128_obv4_1,sa128_obv4_2` 。
+7. 查询租户 `mq_t1` 的基本信息，确认 `primary_zone` 属性修改成功，由 `sa128_obv4_1` 变更为 `sa128_obv4_1,sa128_obv4_2`。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
@@ -77,7 +77,7 @@
     1 row in set
    ```
 
-8. 查询租户 mq_t1 的 unit 信息，变更前后 `unit num` 保持不变。
+8. 查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
@@ -94,7 +94,7 @@
     6 rows in set
    ```
 
-9. 查询租户 mq_t1 的日志流信息，变更前为 2，变更后为 4。
+9. 查询租户 `mq_t1` 的日志流信息，变更前为 2，变更后为 4。
 
    ```sql
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
@@ -110,4 +110,4 @@
     5 rows in set
    ```
 
-通过上述示例，将租户 mq_t1 的 Primary Zone 的 Zone 个数从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4 。变更后租户的服务节点从 2 扩容为 4 ，从而实现了租户扩容。
+通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 1 变更为 2。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4。变更后租户的服务节点从 2 扩容为 4，从而实现了租户扩容。
