--- a/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
@@ -1,6 +1,6 @@
 # 流量分布
 
-在 OceanBase 里面，Leader 承担事务中的读写请求，因此每个分区 Leader 的分布决定了流量在每个节点上的分布。
+在 OceanBase 数据库中，Leader 承担事务中的读写请求，因此每个分区 Leader 的分布决定了流量在每个节点上的分布。
 
 流量分布通过 Primary Zone 来描述，Primary Zone 描述了 Leader 副本的偏好位置，而 Leader 副本承载了业务的强一致读写流量，即 Primary Zone 决定了 OceanBase 数据库的流量分布。
 
