--- a/zh-CN/6.manage/3.replica-management/4.log-stream/2.partition.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/2.partition.md
@@ -1,8 +1,6 @@
 # Partition（分区）
 
-分区是分布式数据库系统中常见的数据管理技术。
-
-它是指将大量的数据划分为若干个分区，并在不同的节点上执行处理和存储。
+分区是分布式数据库系统中常见的数据管理技术。它是指将大量的数据划分为若干个分区，并在不同的节点上执行处理和存储。
 
 通过数据分区，系统可以实现数据的并行处理和分布式存储，使数据的处理和存储更加高效，避免因单一节点的数据量过大而导致系统性能下降，通过数据分区来实现数据的水平扩展，提高系统的可用性，容错性和性能。
 
