--- a/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -12,33 +12,33 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
-  删除资源池的相关操作请参见 [删除资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md)。
+  删除资源池的相关操作，参见 [删除资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md)。
 
 * 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
 
-  手动触发转储的相关操作请参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
+  手动触发转储的相关操作，参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
 
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
-  查看集群节点的资源总量和分配状态的相关操作请参见 [查看集群的资源信息](../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+  查看集群节点的资源总量和分配状态的相关操作，参见 [查看集群的资源信息](../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 操作步骤
 
-下面以调整租户 mq_t1 的 Unit Number 为例来介绍操作方法。
+下面以调整租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient>use oceanbase;
     ```
 
-3. 查看租户 mq_t1 信息，获取其 TENANT_ID。
+3. 查看租户 `mq_t1` 信息，获取其 `TENANT_ID`。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -50,7 +50,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
     1 row in set
    ```
 
-4. 查看租户 mq_t1 所拥有的 unit。
+4. 查看租户 `mq_t1` 所拥有的 Unit。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
@@ -64,7 +64,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
     3 rows in set
    ```
 
-5. 查看租户 mq_t1 目前所拥有的日志流。
+5. 查看租户 `mq_t1` 目前所拥有的日志流。
 
    ```sql
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
@@ -77,13 +77,13 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
     2 rows in set
    ```
 
-6. 把租户 mq_t1 的 unit_num 修改为 2。
+6. 把租户 `mq_t1` 的 `unit_num` 修改为 2。
 
    ```sql
     obclient> ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 2;
    ```
 
-7. 查看租户 mq_t1 修改后的 unit。
+7. 查看租户 `mq_t1` 修改后的 Unit。
 
    ```sql
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
@@ -100,7 +100,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
     6 rows in set
    ```
 
-8. 查看租户 mq_t1 修改后的日志流。
+8. 查看租户 `mq_t1` 修改后的日志流。
 
    ```sql
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
@@ -114,12 +114,8 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
     3 rows in set
    ```
 
-通过上述示例，将租户 mq_t1 的 Unit Number 从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 1，对应的日志流个数为 1；变更后租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2，从而实现了租户扩容。
+通过上述示例，将租户 `mq_t1` 的 Unit Number 从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 1，对应的日志流个数为 1；变更后租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2，从而实现了租户扩容。
 
 ## 相关文档
 
-* 关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
-
-* 关于视图 `CDB_OB_LS` 的介绍可以详见视图 [oceanbase.CDB_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/175.oceanbase-cdb_ob_ls-of-mysql-mode.md) 。
-  
-* 关于视图 `DBA_OB_UNITS` 的介绍可以详见视图 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md) 。
+* [租户扩缩容介绍](1.introduction-to-tenant-scale-in-and-out.md)。
