--- a/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
@@ -13,12 +13,22 @@ OceanBase 数据库支持的容灾等级如下所示。
 | 两地三中心    | 五副本     | 面向一个城市只具备两个机房的场景。</br>主城市与备城市组成一个 5 副本的集群，主城市 4 副本分布于两个 IDC，备城市 1 副本。任何 IDC 的故障，最多损失 2 份副本，剩余的 3 份副本依然满足多数派。| <ul><li> 能够防范少数派节点故障。</li><li>能够防范单机房故障。 </li><li>无法防范主城市的故障。</li></ul>|
 | 三地五中心    | 五副本     | 面向需要城市级容灾能力的场景。</br>三个城市，组成一个 5 副本的集群。两个城市各 2 份副本，第三个城市 1 份副本。任何一个机房或者城市的故障，依然构成多数派，可以确保 RPO=0。 | <ul><li>能够防范少数派节点故障。</li>   <li>能够防范少数派机房故障。</li>   <li>能够防范少数派城市故障。</li></ul>|
 
+三种部署模式示意图如下所示：
+
+* 同城三中心部署模式
+
+* 两地三中心部署模式
+
+* 三地五中心部署模式
+
+OceanBase 数据库的部署模式通过租户级别的 Locality 属性来描述，我们在《副本管理》章节中描述了三种部署模式的 Locality 示例，通过调整租户的 Locality 属性，从而达到灵活的部署模式，进而达到不同的容灾级别。详细信息参见 [Locality 介绍](副本管理章节合入后添加链接)。
+
 多副本技术的容灾架构，其核心逻辑是通过 Paxos 协议保证事务日志达成多数派提交。如果发生故障的节点小于多半数，选举协议能够保证自动恢复，且 RPO = 0。如果多于半数的节点发生故障，就需要人工介入，可以通过单副本的方式拉起服务，由于少数派可能没有包含最新的数据，因此可能会丢失最后一部分数据。
 
 <main id="notice" type='notice'>
-            <h4>注意</h4>
-            <p>单副本拉起操作不是常规的运维操作，是集群无法恢复时最后的应急手段，有数据丢失和双主的风险，操作需要特别谨慎，请在 OceanBase 支持同学指导下进行，本文档暂不提供操作细节。</p>
-          </main>
+    <h4>注意</h4>
+    <p>单副本拉起操作不是常规的运维操作，是集群无法恢复时最后的应急手段，有数据丢失和双主的风险，操作需要特别谨慎，请在 OceanBase 支持同学指导下进行，本文档暂不提供操作细节。</p>
+</main>
 
 在金融行业里，传统关系型数据库往往也部署成“两地三中心”架构，同城两个机房，一个主库，一个热备，异地一个冷备。虽然可以通过数据库原生的半同步机制来保证业务更新的同时也提交到备库，但并不是强保证机制，当主库出现故障时，备库依然可能没有最新的更新，并且强制将备库切为主库可能会导致数据丢失。这就意味着，传统关系型数据库的“两地三中心”架构要么选择高可用，要么选择强一致，无法打破 “CAP 理论”。但 OceanBase 数据库基于 Paxos 协议的多副本容灾技术真正做到了同城和异地的无损容灾，达到 RPO = 0，RTO < 8 秒。
 
