--- a/zh-CN/6.manage/4.disaster-recovery-management/1.disaster-recovery-management-overview.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/1.disaster-recovery-management-overview.md
@@ -1,16 +1,16 @@
 # 容灾管理概述
 
-本节主要介绍 OceanBase 数据库所支持的容灾技术及其使用场景。
+数据库系统在应用架构中承担了数据存储和查询的功能，其对企业数据安全和保障业务连续性至关重要。高可用是数据库系统架构设计中首要考虑的因素，高可用诉求包括服务高可用和数据高可用。本文将介绍 OceanBase 的服务容灾技术，数据容灾技术将在后面的《备份恢复》章节中介绍。
 
-OceanBase 数据库具备多样化的容灾技术，包括集群内的多副本容灾和集群间的主备集群容灾：
+OceanBase 数据库具备多样化的服务容灾技术，包括集群内的多副本容灾和集群间的主备集群容灾：
 
 * 多副本容灾：多副本容灾技术面向单个集群，事务日志持久化并在多个副本之间同步日志数据，基于 Paxos 协议保证日志数据在多数派副本持久化成功，同时通过成员变更提供容灾能力。
 
 * 主备集群容灾：主备集群容灾技术面向多个集群，多集群间传输事务日志，建立基于日志的物理热备服务。在 OceanBase 数据库 V4.x 版本中，采用独立主备集群架构，主备关系存在于租户级别，主备之间通过第三方日志服务建立传输渠道，只传输日志。不同于以前版本的集中式架构，独立主备集群架构下，各个集群是是相互独立的，没有任何直接通信。用户可以更加灵活的管理集群。
 
   <main id="notice" type='explain'>
-            <h4>说明</h4>
-            <p>OceanBase 数据库 V4.0.0 版本暂不支持主备集群容灾。</p>
+      <h4>说明</h4>
+      <p>OceanBase 数据库 V4.0.0 版本暂不支持主备集群容灾。</p>
   </main>
 
 两种技术面向不同的场景。多副本容灾面向集群内少数派节点异常的场景，具备极好的故障恢复速度及数据零丢失能力。为了能够应对跨区域的异地容灾（无法接受三地五中心）以及更高的可用性需求（例如多数派节点异常、软件上的 Bug 等），可以采用主备集群容灾。两种技术互补，共同保证 OceanBase 数据库的服务连续性。租户级主备由于异步同步日志，仅支持最大性能模式，不支持最大保护和最大可用模式，容灾切换时需要保证数据强一致的场景可以采用多副本技术容灾。
