--- a/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -1,6 +1,6 @@
 # 数据库层高可用
 
-OceanBase 数据库基于高性价比的普通服务器采用 Paxos 协议，同一份数据写到多台（>= 3）节点的半数以上，因此当少数派节点发生故障时不会有任何数据丢失，保证 RPO=0；Leader 副本发生故障后，剩余的 Follower 副本能够在短时间内自动选出新 Leader 继续提供服务，无需外部介入，保证 RTO < 8 秒，从而达到强一致和高可用的平衡。用户也可以采用灵活的部署模式，例如，同城三中心、两地三中心、三地五中心等，从而达到各级无损容灾能力，例如同城容灾和异地容灾。
+OceanBase 数据库基于高性价比的普通服务器采用 Paxos 协议，同一份数据写到多台（>= 3）节点的半数以上，因此当少数派节点发生故障时不会有任何数据丢失，保证 RPO = 0；Leader 副本发生故障后，剩余的 Follower 副本能够在短时间内自动选出新 Leader 继续提供服务，无需外部介入，保证 RTO < 8 秒，从而达到强一致和高可用的平衡。用户也可以采用灵活的部署模式，例如，同城三中心、两地三中心、三地五中心等，从而达到各级无损容灾能力，例如同城容灾和异地容灾。
 
 ## Root Service
 
@@ -10,20 +10,20 @@ OBServer 心跳状态相关的配置项如下：
 
 * `lease_time`
   
-  集群级配置项 `lease_time` 用于设置心跳租约时长。该配置项的默认值为 10s。有关该配置项的详细信息，请参见 [lease_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/118.lease_time.md)。
+  集群级配置项 `lease_time` 用于设置心跳租约时长。该配置项的默认值为 10s。有关该配置项的详细信息，参见 [lease_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/118.lease_time.md)。
 
   当 Root Service 累计超过 `lease_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程短暂断线，Root Service 会标记该 OBServer 服务器的心跳状态为 `lease_expired`。
 
 * `server_permanent_offline_time`
   
-  集群级配置项 `server_permanent_offline_time` 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。该配置项的默认值为 3600s。有关该配置项的更多详细信息，请参见 [server_permanent_offline_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md)。
+  集群级配置项 `server_permanent_offline_time` 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。该配置项的默认值为 3600s。有关该配置项的更多详细信息，参见 [server_permanent_offline_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md)。
 
   当 Root Service 累计超过 `server_permanent_offline_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程断线，Root Service 会标记该 OBServer 的心跳状态为 `permanent_offline`。
 
 <main id="notice" type='explain'>
-            <h4>说明</h4>
-            <p>您可以通过 <code>SHOW PARAMETERS</code> 语句查看以上集群级配置项的值，例如，<code>SHOW PARAMETERS LIKE 'server_permanent_offline_time';</code>。</p>
-          </main>
+      <h4>说明</h4>
+      <p>您可以通过 <code>SHOW PARAMETERS</code> 语句查看以上集群级配置项的值，例如，<code>SHOW PARAMETERS LIKE 'server_permanent_offline_time';</code>。</p>
+</main>
 
 Root Service 根据心跳数据包可以获得 OBServer 如下的工作状态：
 
@@ -37,9 +37,9 @@ Root Service 根据心跳数据包可以获得 OBServer 如下的工作状态：
 
 ## 隔离节点
 
-OBProxy 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `stop_time` 字段大于 0）状态、`INACTIVE` 状态等，从而避免将应用流量路由到异常节点上。
+ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `stop_time` 字段大于 0）状态、`INACTIVE` 状态等，从而避免将应用流量路由到异常节点上。
 
-如果某个节点不稳定，可能时不时提供服务，存在响应慢等各种不正常情况。如果客户端连接到该节点，将导致客户端感受到不稳定。OceanBase 数据库提供了 `STOP SERVER` 命令用于隔离节点。隔离后，该节点不会对外提供服务，OBProxy 也不会把请求路由到该节点上，可以安全的进行诊断/替换/维修等动作，是运维和应急的利器。Stop Server 会检查所有剩余副本是否满足多数派、是否日志同步，当条件不满足的时候 Stop Server 操作会返回失败；条件满足的情况下等待故障节点上的 Leader 全部切走后系统会返回成功。Stop Server 成功后保证能够做任何运维动作，包括 Kill observer 进程。Stop Server 的详细操作请参见 [隔离节点](暂时无法加链接)。
+如果某个节点不稳定，可能时不时提供服务，存在响应慢等各种不正常情况。如果客户端连接到该节点，将导致客户端感受到不稳定。OceanBase 数据库提供了 `STOP SERVER` 命令用于隔离节点。隔离后，该节点不会对外提供服务，ODP 也不会把请求路由到该节点上，可以安全的进行诊断/替换/维修等动作，是运维和应急的利器。Stop Server 会检查所有剩余副本是否满足多数派、是否日志同步，当条件不满足的时候 Stop Server 操作会返回失败；条件满足的情况下等待故障节点上的 Leader 全部切走后系统会返回成功。Stop Server 成功后保证能够做任何运维动作，包括 Kill observer 进程。Stop Server 的详细操作请参见 [隔离节点](暂时无法加链接)。
 
 节点隔离适用于单机房故障场景：
 
@@ -55,7 +55,7 @@ OBProxy 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且
 
 主动切主的操作步骤如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -100,11 +100,11 @@ OBProxy 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且
    24 rows in set
    ```
 
-   有关 `CDB_OB_LS_LOCATIONS` 视图的更多信息，请参见 [CDB_OB_LS_LOCATIONS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/93.oceanbase-cdb_ob_ls_locations-of-mysql-mode.md)。
+   有关 `CDB_OB_LS_LOCATIONS` 视图的更多信息，参见 [CDB_OB_LS_LOCATIONS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/93.oceanbase-cdb_ob_ls_locations-of-mysql-mode.md)。
 
 3. 根据实际情况，选择合适的命令切主。
 
-   * 修改指定租户的某一个日志流副本的角色
+   * 修改指定租户的某一个日志流副本的角色。
 
       ```sql
       ALTER SYSTEM SWITCH REPLICA role LS [=] ls_id SERVER [=] 'ip:port' TENANT = tenant_name;
@@ -126,7 +126,7 @@ OBProxy 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且
       obclient [(none)]> ALTER SYSTEM SWITCH REPLICA LEADER LS = 1001 SERVER = 'xx.xx.xx.218:2882' TENANT = oracle001;
       ```
 
-   * 修改某台 OBServer 上所有副本的角色
+   * 修改某台 OBServer 上所有副本的角色。
 
       ```sql
       ALTER SYSTEM SWITCH REPLICA role SERVER [=] 'ip:port' [TENANT = tenant_name];
@@ -146,7 +146,7 @@ OBProxy 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且
       obclient [(none)]> ALTER SYSTEM SWITCH REPLICA LEADER SERVER = 'xx.xx.xx.218:2882' TENANT = oracle001;
       ```
 
-   * 修改某个 Zone 中所有副本的角色
+   * 修改某个 Zone 中所有副本的角色。
 
       ```sql
       ALTER SYSTEM SWITCH REPLICA role ZONE [=] zone_name [TENANT = tenant_name];
