--- a/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/1.data-link-introduction.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/1.data-link-introduction.md
@@ -2,6 +2,8 @@
 
 OceanBase 数据库作为一款分布式数据库，数据天然分布于多个节点上。为了屏蔽分布式数据库给应用程序带来的复杂性，使得应用程序访问 OceanBase 数据库像访问单机数据库一样简单，从架构上引入了 ODP，全称是 OceanBase 数据库代理（OceanBase Database Proxy，又称为 OBProxy），ODP 是 OceanBase 专用的反向服务代理，以解决 OceanBase 数据库的 SQL 路由和 容灾问题。
 
+![数据链路图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/manage-database/obproxy-data-link.png)
+
 ODP 作为数据链路上的核心组件，存在多种部署形态：
 
 * OBServer 端部署：ODP 与 OBServer 部署于同一台机器上，当压力大时可能存在资源竞争，排查问题比较困难。常见于私有云场景。
