--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
@@ -49,7 +49,7 @@ obclient> CREATE RESOURCE POOL r_p0 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', 
 obclient> CREATE TENANT tt RESOURCE_POOL_LIST = ('r_p0');
 ```
 
-示例中，租户 `tt` 使用资源池 `r_p0`。在 `zone1`、`zone2`、`zone3` 每个 Zone 上分别有 2 个资源单元，随着业务量的不断变大，每个 Zone 上 2 个资源单元无法承载当前的业务量，因此需要考虑调大 `unit num` 来提高租户的服务能力，以满足新的业务需求。
+示例中，租户 `tt` 使用资源池 `r_p0`。在 `zone1`、`zone2`、`zone3` 每个 Zone 上分别有 2 个资源单元，随着业务量的不断变大，每个 Zone 上 2 个资源单元无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
 
 您可以使用以下语句将租户在资源池 `r_p0` 的资源单元数量调整为 `3`，进而提高租户的服务能力。
 
