--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
@@ -1,6 +1,6 @@
 # 租户资源水平扩缩容
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/horizontal-scaling-of-tenant-resources
-租户资源的水平管理主要是通过调整资源池的 `UNIT_NUM` 来动态调整租户的可用资源。具体表现为，您可以通过调整资源池的 `UNIT_NUM` 来调整资源池下每个 Zone 内资源单元的数量，进而提高或降低该租户在对应 Zone 上的服务能力。OceanBase 数据库 V4.0 版本后，不再支持租户的多个 Resource Pool 的 Unit 数目异构。
+租户资源的水平管理主要是通过调整资源池的 `UNIT_NUM` 来动态调整租户的可用资源。具体表现为，您可以通过调整资源池的 `UNIT_NUM` 来调整资源池下每个 Zone 内 Unit 数量，进而提高或降低该租户在对应 Zone 上的服务能力。OceanBase 数据库 V4.0 版本后，不再支持租户的多个 Resource Pool 的 Unit 数目异构。
 
 `UNIT_NUM` 的变更也分为两类，即调大 `UNIT_NUM` 和调小 `UNIT_NUM`：
 
@@ -15,9 +15,9 @@ obclient> CREATE RESOURCE POOL rp1 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', '
 
 1. resource pool 没有与租户绑定时调整 resource pool unit_num：
 
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大unit num
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小unit num
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定资源单元调小unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大 unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小 unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定 Unit 调小 unit num
 
 2. resource pool 与租户绑定时调整租户 unit_num：
 
@@ -49,9 +49,10 @@ obclient> CREATE RESOURCE POOL r_p0 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', 
 obclient> CREATE TENANT tt RESOURCE_POOL_LIST = ('r_p0');
 ```
 
-示例中，租户 `tt` 使用资源池 `r_p0`。在 `zone1`、`zone2`、`zone3` 每个 Zone 上分别有 2 个资源单元，随着业务量的不断变大，每个 Zone 上 2 个资源单元无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
+示例中，租户 `tt` 使用资源池 `r_p0`。在 `zone1`、`zone2`、`zone3` 每个 Zone 上分别有 2 个 Unit，随着业务量的不断变大，每个 Zone 上 2 个 Unit 无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
 
-您可以使用以下语句将租户在资源池 `r_p0` 的资源单元数量调整为 `3`，进而提高租户的服务能力。
+您可以使用以下语句将租户在资源池 `r_p0` 的 Unit 数量调整为 `3`，进而提高租户的服务能力。
 
 ```sql
 obclient> ALTER RESOURCE TENANT tt UNIT_NUM = 3;
+```
