--- a/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -1,6 +1,6 @@
 # 通过修改 UNIT_NUM
 
-对租户内资源的扩容还可以通过调大资源池中的 `UNIT_NUM` 来实现。当前版本暂不支持通过调小资源池中的 UNIT_NUM 来进行缩容。
+对租户内资源的扩容还可以通过调大资源池中的 `UNIT_NUM` 来实现。当前版本暂不支持通过调小资源池中的 `UNIT_NUM` 来进行缩容。
 
 ## 前提条件
 
