--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources-1/2.horizontal-scaling-of-tenant-resources.md
@@ -15,16 +15,16 @@ obclient> CREATE RESOURCE POOL rp1 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', '
 
 1. resource pool 没有与租户绑定时调整 resource pool unit_num：
 
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大 unit num
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小 unit num
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定 Unit 调小 unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大 unit_num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小 unit_num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定 Unit 调小 unit_num
 
 2. resource pool 与租户绑定时调整租户 unit_num：
 
 obclient> CREATE RESOURCE POOL rp2 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', 'zone2');
 obclient> CREATE RESOURCE POOL rp3 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone3');
 obclient> CREATE TENANT tt RESOURCE_POOL_LIST = ('rp2', 'rp3') ...;
-obclient> ALTER RESOURCE TENANT tt UNIT_NUM = 3; // 同时调大两个 resource pool 的 unit num。暂不支持
+obclient> ALTER RESOURCE TENANT tt UNIT_NUM = 3; // 同时调大两个 resource pool 的 unit_num。暂不支持
 ```
 
 ## 调大 UNIT_NUM
