--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -26,19 +26,19 @@
 
 ### 背景信息
 
-假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。集群中有一个普通租户 `tenant1`，其资源分配情况如下：
+假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。在集群中创建一个普通租户 `MySQL`，其资源分配情况如下：
 
 ```sql
 obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6, MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT=0, LOG_DISK_SIZE '2G';
 
-obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('z1','z2','z3');
+obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 1, ZONE_LIST ('z1','z2','z3');
 
-obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
+obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 ```
 
 ### 调大 UNIT_NUM
 
-随着业务量的不断变大，每个 Zone 上 2 个资源单元已经无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
+随着业务量的不断变大，每个 Zone 上 1 个 Unit 已经无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -80,7 +80,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
   </main>
 
    ```sql
-   obclient>ALTER RESOURCE TENANT tenant1 UNIT_NUM = 3;
+   obclient>ALTER RESOURCE TENANT MySQL UNIT_NUM = 2;
    ```
 
    语句执行后，系统会直接在每个 Zone 内添加一个 Unit。
@@ -88,7 +88,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 ## 更多信息
 
-在租户的扩容和缩容操作中，您可以借助以下内部表或视图来获取租户资源相关的信息：
+在租户的扩容操作中，您可以借助以下内部表或视图来获取租户资源相关的信息：
 
 * oceanbase.DBA_OB_UNIT_CONFIGS
 
@@ -209,7 +209,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 * oceanbase.DBA_OB_RESOURCE_POOLS
 
-   `DBA_OB_RESOURCE_POOLS` 视图中记录了当前集群中所有资源池的资源配置情况。其中，`unit_count` 表示资源池中某个资源单元的个数。
+   `DBA_OB_RESOURCE_POOLS` 视图中记录了当前集群中所有资源池的资源配置情况。其中，`unit_count` 表示资源池中 Unit 个数。
 
   查询示例如下：
 
