--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
@@ -37,7 +37,7 @@ opt_set_sys_var:
 |--------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
 | tenant_name              | 指定租户名。最长 128 个字符，只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能是 OceanBase 数据库的关键字。                                                                       |
 | IF NOT EXISTS            | 如果要创建的租户名已存在，并且没有指定 `IF NOT EXISTS`，则会报错。                                                                                                       |
-| RESOURCE_POOL_LIST       | 资源池列表，为创建租户时的必填项，暂时只支持一个 Resource Pool。                                                                                                         |
+| RESOURCE_POOL_LIST       | 资源池列表，为创建租户时的必填项。                                                                                                        |
 | DEFAULT TABLEGROUP       | 设置租户默认表组信息，`NULL` 表示取消默认表组。 如果不指定，默认为 `NULL`。                                                                                   |
 | COMMENT                  | 指定注释。                                                                                                                                           |
 | CHARACTER SET \| CHARSET | 指定租户的字符集。                                                                                                                                       |
@@ -51,11 +51,11 @@ opt_set_sys_var:
 * 创建租户。
 
   ```sql
-  obclient> CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4',PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1');
+  obclient> CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4',PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') set ob_tcp_invited_nodes='%';
   ```
 
 * 创建 Oracle 兼容模式租户。
 
-  ```javascript
-  obclient> CREATE TENANT IF NOT EXISTS tenant1 ZONE_LIST=('zone1'), PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') SET ob_compatibility_mode='oracle';
+  ```sql
+  obclient> CREATE TENANT IF NOT EXISTS tenant1 ZONE_LIST=('zone1'), PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') SET ob_compatibility_mode='oracle', set ob_tcp_invited_nodes='%';
   ```
