400ofuse部署参数修改

--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -20,15 +20,42 @@
 >
 > 操作系统需要配置网络和软件管理器（ yum 或 zypper 源）。
 
-## BIOS设置
+## BIOS 设置
 
-特殊设置：
+**特殊设置：**
 
 * Numa 关闭（INTEL)
 
+  >**说明**
+  >
+  >INTEL 环境建议修改配置文件 `/etc/sysctl.conf` 将参数 `vm.swapness` 设置为 `0`，方法如下：
+  >
+  >```bash
+  >[root@xxx /]
+  >$vi /etc/sysctl.conf
+  >vm.swapness = 0
+  >
+  >[root@xxx /]
+  >$sysctl -p    #应用 sysctl.conf 配置文件里的值
+  >```
+
 * Numa 开启（海光/AMD/鲲鹏/ARM)
 
-BIOS 需要关闭以下选项：
+  >**说明**
+  >
+  >ARM 和海光环境建议修改配置文件 `/etc/sysctl.conf` 将参数 `kernel.numa_balancing`、`vm.zone_reclaim_mode` 和 `vm.swapness` 设置为 `0`，方法如下：
+  >
+  >```bash
+  >[root@xxx /]
+  >$vi /etc/sysctl.conf
+  >kernel.numa_balancing = 0
+  >vm.zone_reclaim_mode = 0
+  >vm.swapness = 0
+  >
+  >[root@xxx /]
+  >$sysctl -p    #应用 sysctl.conf 配置文件里的值
+
+**BIOS 需要关闭以下选项：**
 
 * Cstate
 
@@ -40,17 +67,15 @@ BIOS 需要关闭以下选项：
 
 * Turbo Mode
 
-BIOS 需要配置以下选项：
+**BIOS 需要配置以下选项：**
 
 * Automatic Power on After Power Loss: Always on
 
 * Intel Virtualization Technology：开启
 
-* SOL console redirection（串口重定向）：开启
-
 * Hyper-threading：开启
 
-* Hardware Perfetcher：开启
+* Hardware prefetcher：开启
 
 * VT-d：开启
 
@@ -61,21 +86,6 @@ BIOS 需要配置以下选项：
 > **说明**
 >
 > 不同的服务器修改 BIOS 的方式不同，具体操作请参见服务器操作手册。
-
-### ARM 环境部署建议
-
-* BIOS 及内核参数开启 Numa 支持。
-* 执行以下命令关闭 `numa balancing`，避免 `balance` 过程中性能可能发生抖动。
-
-  ```bash
-  sysctl kernel.numa_balancing=0
-  ```
-
-* 执行以下命令将 `zone_reclaim_mode` 设置为 `0`。
-
-  ```bash
-  sysctl vm.zone_reclaim_mode=0
-  ```
 
 ## 磁盘挂载
 
