--- a/zh-CN/5.administrator-guide/6.basic-database-management/7.memory-management-1/7.view-memory-usage.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/7.memory-management-1/7.view-memory-usage.md
@@ -52,7 +52,7 @@ obclient> SELECT tenant_id, hold FROM oceanbase.GV$OB_TENANT_MEMORY WHERE svr_ip
 在 `sys` 租户下，通过查询 `oceanbase.GV$OB_MEMORY` 视图，可以查看指定租户的内存使用详情。
 
 ```sql
-obclient> SELECT tenant_id, ctx_name, hold FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND svr_port=2882 AND tenant_id = 1002 GROUP BY context;
+obclient> SELECT tenant_id, ctx_name, hold FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND svr_port=2882 AND tenant_id = 1002 ORDER BY ctx_name;
 +-----------+-----------------+-----------+
 | tenant_id | ctx_name        | hold      |
 +-----------+-----------------+-----------+
