--- a/zh-CN/5.administrator-guide/6.basic-database-management/7.memory-management-1/8.common-memory-problems-1.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/7.memory-management-1/8.common-memory-problems-1.md
@@ -26,7 +26,7 @@ ORDER BY tenant_id,TOTAL_GB DESC;
 obclient> SELECT tenant_id,svr_ip,hold module_sum
 FROM oceanbase.GV$OB_MEMORY
 WHERE tenant_id>1000 AND hold<>0 AND
-             context NOT IN ( 'OB_KVSTORE_CACHE','OB_MEMSTORE')
+             ctx_name NOT IN ( 'OB_KVSTORE_CACHE','OB_MEMSTORE')
 GROUP BY tenant_id,svr_ip;
 ```
 
@@ -54,10 +54,10 @@ WHERE (hit_count/executions) < 0.9 AND executions > 1000;
 
 ## 问题三：日志中有 fail to allocate memory 或 allocate memory fail 等信息怎么办？
 
-日志中会包含 `tenant_id` （租户编号）及 `context` （内存模块）信息，可以通过以下语句查询具体的内存模块信息：
+日志中会包含 `tenant_id` （租户编号）及 `ctx_name` （内存模块）信息，可以通过以下语句查询具体的内存模块信息：
 
 ```sql
-obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE context=xxx AND tenant_id = xxx
+obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE ctx_name=xxx AND tenant_id = xxx
 ```
 
 从问题一中可知，如果模块内存超限，需要先调整单独模块的内存。如果租户内容过小，需要增加租户内存。具体操作请联系技术支持人员协助处理。
