--- a/zh-CN/7.reference/1.oceanbase-database-concepts/3.multi-tenant-architecture-1/5.tenants-and-resource-management-1/1.tenant-resource-management.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/3.multi-tenant-architecture-1/5.tenants-and-resource-management-1/1.tenant-resource-management.md
@@ -114,6 +114,11 @@ obclient>CREATE TENANT tt resource_pool_list=('pool1','pool2');
 
 示例语句中首先创建了两个资源池 `pool1` 和 `pool2`，并在此基础上创建了租户 `tt`，租户 `tt` 在 `z1`、`z2` 上各有 2 个资源单元，在 `z3` 上有 1 个资源单元，各资源单元的规格均使用 `uc1` 指定的资源配置。
 
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>属于同一个租户的多个资源池的 <code>ZONE_LIST</code> 彼此不允许有交集。</p>
+</main>
+
 ## 租户资源的变更
 
 租户的资源变更通过调整租户下各资源的三要素即可完成，具体表现为，可以分别单独调整资源池的 Unit 配置、`ZONE_LIST` 和 `UNIT_NUM` 来进行租户资源的变更。除此之外，还支持对资源池进行 Split 或 Merge 两个特殊的变更操作。
