--- a/zh-CN/7.reference/8.supporting-tools/1.ob-admin/3.clog/3.clog_tool.md
+++ b/zh-CN/7.reference/8.supporting-tools/1.ob-admin/3.clog/3.clog_tool.md
@@ -16,7 +16,7 @@ log_tool 即是旧版本中的 clog_tool，在 OceanBase 数据库 V4.0.0 版本
 | `dump_filter` | 解析指定的 clog 文件，并打印这个日志文件中满足过滤条件的记录。     |
 | `stat`   | 解析指定的 clog 文件，并打印这个日志文件的统计信息。          |
 
-### dump_log 命令
+### dump_log
 
 ```Shell
 ob_admin log_tool dump_log <clog_file_name>
@@ -46,7 +46,7 @@ ob_admin log_tool dump_log <clog_file_name>
     ob_admin log_tool dump_log {101..104}
     ```
 
-### dump_filter 命令
+### dump_filter
 
 ```Shell
 ob_admin log_tool dump_filter '<filter_name>' <clog_file_name>
@@ -54,31 +54,32 @@ ob_admin log_tool dump_filter '<filter_name>' <clog_file_name>
 
 代码使用说明：
 
-* 使用 `dump_filter` 命令可以打印满足特定条件的 clog 日志记录，从而减少 clog 日志记录的打印量，便于问题排查。
+* 使用 `dump_filter` 按照过滤条件将 clog 文件中的事务相关内容打印。
 
-* `<clog_file_name>` 使用详情，请参见 [dump_log 命令](#dump_log%20命令)。
+* `<clog_file_name>` 使用详情，请参见 [dump_log](#dump_log)。
 
 * 目前，`filter_name` 的取值如下：
   |     过滤条件名称     |   说明    |
   |----------------|---------|
-  | `table_id`     | 数据表标识符  |
-  | `partition_id` | 数据分区标识符 |
-  | `log_id`       | 日志记录标识符 |
+  | `tablet_id`    | 数据表标识符   |
+  | `tx_id`        | 事务标识符     | 
+  
 
   `filter_name` 可以单独使用，也可以组合使用。过滤多个条件时，条件名称需要用英文分号（;）隔开。例如：
-  * `table_id` 为 123，clog 文件名为 `101` 且位于当前目录，则运行以下命令解析并打印该文件。
+
+  * `tablet_id` 为 123，clog 文件名为 `101` 且位于当前目录，则运行以下命令解析并打印该文件。
 
     ```Shell
-    ob_admin log_tool dump_filter 'table_id=123' 101
+    ob_admin log_tool dump_filter 'tablet_id=123' 101
     ```
 
-  * `table_id` 为 `123`，`partition_id` 为 `2`，需要解析的 clog 文件名为 `101` 且位于当前目录，则运行以下命令解析并打印该文件。
+  * `tablet_id` 为 `123`，`tx_id` 为 `26058724`，需要解析的 clog 文件为 `101` 且位于当前目录，则运行以下命令解析并打印该文件。
 
     ```Shell
-    ob_admin log_tool dump_filter 'table_id=123;partition_id=2' 101
+    ob_admin log_tool dump_filter 'tablet_id=123;tx_id=26058724' 101
     ```
 
-### stat 命令
+### stat
 
 ```Shell
 ob_admin log_tool stat <clog_file_name>
@@ -87,9 +88,10 @@ ob_admin log_tool stat <clog_file_name>
 代码使用说明：
 
 * 使用 `stat` 命令获取指定 clog 文件的统计信息，包括日志文件大小、日志记录个数、事务个数等信息。
+
   > **说明**
   >
   > log_tool 可以通过环境变量 `log_tool_BREAK_ON_FAIL` 控制解析过程中是直接退出还是忽略错误继续。当 `log_tool_BREAK_ON_FAIL` 的值为 true 时，直接退出；当 `log_tool_BREAK_ON_FAIL` 的值为 false 时，则忽略错误继续解析。
 
-* `<clog_file_name>` 使用详情，请参见 [dump_log 命令](#dump_log%20命令)。
+* `<clog_file_name>` 使用详情，请参见 [dump_log](#dump_log)。
 
