--- a/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
+++ b/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
@@ -94,7 +94,7 @@ all-in-one package 提供了两种安装方式：
 
 #### 安装后设置和验证
 
-  安装脚本会尝试自动设置好环境变量，对于特定的系统如果环境变量未生效，可以根据提示，执行设置环境变量的脚本，如果需要设置为每次登陆都生效，需要根据用户使用的 terminal 环境，写到对应的 profile 文件中，一般为 `~/.bash_profile`.
+  安装脚本会尝试自动设置好环境变量，对于特定的系统如果环境变量未生效，可以根据提示，执行设置环境变量的脚本，如果需要设置为每次登陆都生效，需要根据用户使用的 terminal 环境，写到对应的 profile 文件中，一般为 `~/.bash_profile`。
 
   ```bash
     
@@ -105,6 +105,11 @@ all-in-one package 提供了两种安装方式：
     More Details:          obd -h
     =====================================================================
   ```
+
+<main id="notice" type='notice'>
+            <h4>注意</h4>
+            <p>安装完成后需执行 <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> 否则直接执行 <code>which obd</code> 会失败</p>
+          </main>
 
   执行 `which obd` 和 `which obclient` 检测是否安装成功，如果可以找到 oceanbase-all-in-one 下的 obd 和 obclient 路径，则表示安装成功。
 
