--- a/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
@@ -4,7 +4,7 @@
 
 在 OceanBase 数据库层面，我们指日志流，日志流是 OceanBase 4.0 新引入的概念，用于描述用户数据在数据库层面的物理形式。
 
-副本是为了提高 OceanBase 数据库的可用性和容错性而引入的概念，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。OceanBase 通过分区，Tablet 复制、日志流同步等方式将数据复制到多个副本以防止数据丢失，确保系统在一个或多个节点故障时，数据可以从其他节点中检索。OceanBase 副本数据包括三种类型：RedoLog、MemTable、SSTable。
+副本是为了提高 OceanBase 数据库的可用性和容错性而引入的概念，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。OceanBase 通过日志同步方式将数据复制到多个副本，以防止数据丢失，确保系统在一个或多个节点故障时，数据可以从其他节点中检索。OceanBase 副本数据包括三种类型：RedoLog、MemTable、SSTable。
 
 OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两部分：基线数据和增量数据。基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
 
