--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/1.optimizer-hint.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/1.optimizer-hint.md
@@ -32,7 +32,6 @@ Hint 相关参数名称、语义和语法如下表所示。
 | ORDERED                     | ORDERED                                                                                  | 设置按照 SQL 中的顺序进行联接。                                                                                                                                                           |
 | FULL                        | FULL(\[qb_name\] TBL_NAME)                                                               | 设置表访问路径为主表等价于 `INDEX(TBL_NAME PRIMARY)`。                                                                                                                                     |
 | USE_PLAN_CACHE              | USE_PLAN_CACHE(NONE\[DEFAULT\])                                                          | 设置是否使用计划缓存： <ul><li> `NONE`：表示不使用计划缓存。</li>   <li> `DEFAULT`：表示按照服务器本身的设置来决定是否使用计划缓存。</li></ul>    |
-| ACTIVATE_BURIED_POINT       | ACTIVATE_BURIED_POINT(INTNUM, \[FIX_MOD \| BEFORE_MODE\], INTNUM, \[INTNUM \| -INTNUM\]) | 用于调试，触发内部设定的错误点。                                                                                                                                                             |
 | USE_MERGE                   | USE_MERGE(\[qb_name\] TBL_NAME_LIST)                                                     | 设置指定表在作为右表时使用 Merge Join。                                                                                                                                                    |
 | USE_HASH                    | USE_HASH(\[qb_name\] TBL_NAME_LIST)                                                      | 设置指定表在作为右表时使用 Hash Join。                                                                                                                                                     |
 | NO_USE_HASH                 | NO_USE_HASH(\[qb_name\] TBL_NAME_LIST)                                                   | 设置指定表在作为右表时不使用 Hash Join。                                                                                                                                                    |
@@ -324,6 +323,74 @@ index_name [, index_name] ...
 ```
 
 Oracle 模式的语法中一个表只能指定一个 `INDEX`，而 MySQL 模式的语法可以指定多个。但是 OceanBase 数据库中 MySQL 模式的语法虽然支持指定多个 `INDEX`，但是对于 `USE` 和 `FORCE` 方式，只会用第一个 `INDEX` 生成 `PATH`，即使 SQL 语句中没有该 `INDEX` 的 `filter` 而导致全部扫描同时回表（即 OceanBase 数据库当前设计是认为写 Hint 的人比程序更明白那条路径是更好的）。`IGNORE` 类型会忽略所有指定的 `INDEX`。`USE`、`FORCE` 方式和 Oracle 的Hint 方式实际是一样的，如果该方式的 `INDEX` 不存在或者处于 `invalid` 状态，则 Hint 无效。对于 `IGNORE` 方式，如果将包括主表在内的所有 `INDEX` 忽略，则 Hint 无效。
+
+在 SQL 语句中，表名存在别名即 `table_name [AS] alias` ，必须写表别名，才能使 `INDEX` 生效。示例如下：
+
+```sql
+obclient> create table t1(c1 int, c2 int, c3 int);
+Query OK, 0 rows affected
+
+obclient> create index idx1 on t1(c1);
+Query OK, 0 rows affected
+
+obclient> create index idx2 on t1(c2);
+Query OK, 0 rows affected
+
+obclient> insert into t1 with recursive cte(n) as (select 1 from dual union all select n+1 from cte where n < 1000) select n, mod(n, 3), n from cte;
+Query OK, 1 row affected
+
+obclient> analyze table t1 COMPUTE STATISTICS for all columns size 128;
+Query OK, 0 rows affected
+
+obclient> explain select * from t1 where c1 = 1 and c2 = 1\G
+*************************** 1. row ***************************
+Query Plan: =======================================
+|ID|OPERATOR  |NAME    |EST. ROWS|COST|
+---------------------------------------
+|0 |TABLE SCAN|T1(IDX1)|1        |5   |
+=======================================
+
+Outputs & filters: 
+-------------------------------------
+  0 - output([T1.C1], [T1.C2], [T1.C3]), filter([T1.C2 = 1]), rowset=256, 
+      access([T1.__pk_increment], [T1.C1], [T1.C2], [T1.C3]), partitions(p0)
+
+1 row in set
+
+-------生效的 index
+obclient> explain select /*+index(t idx2)*/ * from t1 t where c1 = 1 and c2 = 1\G
+*************************** 1. row ***************************
+Query Plan: ======================================
+|ID|OPERATOR  |NAME   |EST. ROWS|COST|
+--------------------------------------
+|0 |TABLE SCAN|T(IDX2)|1        |5   |
+======================================
+
+Outputs & filters: 
+-------------------------------------
+  0 - output([T.C1], [T.C2], [T.C3]), filter([T.C1 = 1]), rowset=256, 
+      access([T.__pk_increment], [T.C1], [T.C2], [T.C3]), partitions(p0)
+
+1 row in set 
+
+-------不生效的 index
+obclient> explain select /*+index(t1 idx2)*/ * from t1 t where c1 = 1 and c2 = 1\G
+*************************** 1. row ***************************
+Query Plan: ======================================
+|ID|OPERATOR  |NAME   |EST. ROWS|COST|
+--------------------------------------
+|0 |TABLE SCAN|T(IDX1)|1        |5   |
+======================================
+
+Outputs & filters: 
+-------------------------------------
+  0 - output([T.C1], [T.C2], [T.C3]), filter([T.C2 = 1]), rowset=256, 
+      access([T.__pk_increment], [T.C1], [T.C2], [T.C3]), partitions(p0)
+
+1 row in set 
+```
+
+根据示例结果，`c1 = 1` 过滤性优于 `c2 = 1`，INDEX Hint 不生效时使用优化器索引选择机制使用了 `IDX1`。
 
 ### FULL Hint
 
