修改 1.before-you-start.md

--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
@@ -88,7 +88,7 @@ Query OK, 0 rows affected
 
 ## 关于超时时间
 
-在 OceanBase 数据库中，您可能在查询或执行 DML 操作时遇到 'timeout' 或 'Transaction is timeout' 的错误，这是因为 OceanBase 数据库对查询和事务超时做了默认配置，方便用户针对不同业务场景进行调整。
+在 OceanBase 数据库中，您可能在查询或执行 DML 操作时遇到 `timeout` 或 `Transaction is timeout` 的错误，这是因为 OceanBase 数据库对查询和事务超时做了默认配置，方便用户针对不同业务场景进行调整。
 
 OceanBase 数据库提供了以下超时时间相关的变量，可使用 `SHOW VARIABLES LIKE '%timeout%';` 命令进行查看。
 
