400ofuse体验OceanBase企业版格式修改

--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -34,10 +34,10 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
    <main id="notice" type='explain'>
    <h4>说明</h4>
-   <p>安装包下载地址在 OceanBase 数据库官方网站左上角单击 **支持与服务** 下的 [软件下载](https://www.oceanbase.com/softwareCenter) 按钮进入下载中心页面。</p>
+   <p>请联系技术支持获取对应安装包。</p>
    </main>
 
-1. 磁盘规划。
+4. 磁盘规划。
 
    默认情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录，`/home` 作为 OceanBase 数据库的安装目录。
 
@@ -69,8 +69,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    <p>如果已有 <code>admin</code> 组和 <code>admin</code> 用户，但 <code>uid/gid</code> 不是 500，建议删掉后利用上述脚本重新创建。</p>
    </main>
 
-
-1. 修改操作系统内核配置。
+4. 修改操作系统内核配置。
 
    执行以下命令，对每台 OBServer 服务器进行设置。
 
@@ -79,7 +78,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    [root@hostname clonescripts]# ./clone.sh -c -r ob
    ```
 
-2. 安装依赖包。
+5. 安装依赖包。
 
    在 OBServer 服务器执行以下命令，安装依赖包。
 
@@ -88,7 +87,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    [root@hostname clonescripts]# ./clone.sh -m -r ob
    ```
 
-3. 安装 OceanBase 数据库 RPM 包。
+6. 安装 OceanBase 数据库 RPM 包。
 
    示例如下：
 
@@ -99,7 +98,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    1:oceanbase-4.0.0.0-100000152022092################################# [100%]
    ```
 
-4. 安装 OceanBase 数据库客户端 OBClient。
+7. 安装 OceanBase 数据库客户端 OBClient。
 
    OBClient 是 OceanBase 数据库命令行客户端，可以访问 OceanBase 数据库的 MySQL 租户和 Oracle 租户。
 
@@ -119,7 +118,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    /usr/bin/obclient
    ```
 
-5. 初始化 OceanBase 目录。
+8. 初始化 OceanBase 目录。
 
    OceanBase 数据库的数据目录通常建议在独立的磁盘上，然后通过软链接方式链接到软件 Home 目录下面。其中 `$cluster_name` 为集群名。
 
@@ -149,7 +148,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    -bash-4.2$ for t in {clog,etc2,ilog,oob_clog};do ln -s /data/log1/obdemo/$t /home/admin/oceanbase/store/obdemo/$t; done
    ```
 
-6. 启动 observer 进程。
+9. 启动 observer 进程。
 
    示例如下：
 
@@ -172,12 +171,12 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    -bash-4.2$ ps -ef|grep observer
    ```
 
-7.  集群 bootstrap 操作。
+10. 集群 bootstrap 操作。
 
-   <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p><ul><li>示例 IP 做了脱敏处理，这不是安装需求。在部署时应根据自己机器真实 IP 填写。</li><li>通过 obclient 命令连接已启动的 observer 进程，密码为空。</li></ul> </p>
-   </main>
+    <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p><ul><li>示例 IP 做了脱敏处理，这不是安装需求。在部署时应根据自己机器真实 IP 填写。</li><li>通过 obclient 命令连接已启动的 observer 进程，密码为空。</li></ul> </p>
+    </main>
 
     ```sql
     [root@hostname /]# obclient -h127.0.0.1 -uroot@sys -P2881 -p
@@ -190,7 +189,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
     Query OK, 0 rows affected
     ```
 
-8.  验证集群初始化成功。
+11. 验证集群初始化成功。
 
     进行 bootstrap 后，执行 `SHOW DATABASES;` 命令，能看到数据库列表里有 oceanbase 即可。
 
